--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
     <section id="home">
-        <h2>Welcome to Your Studio</h2>
+        <h2>Welcome to our Studio</h2>
         <p>Capturing moments that last a lifetime.</p>
         <img src="ASSETS/BANNER01.jpg" width="100%"  alt="BANNER">
     </section>
